add convenience getDouble function